fixes the login whitespace bug

--- a/src/style.css
+++ b/src/style.css
@@ -363,7 +363,7 @@ input,
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding: 2rem 4rem;
   color: var(--text-color);
 }
